@@ -2141,7 +2141,9 @@
                          <option name="attack" value="0"/>
                          <option name="defense" value="4"/>
 						 <option name="canBeDamaged" value="true"/>
+						 <!-- maxDamage is the total damage the unit can take.  If a factory, and canProduceXUnits = -1 or is missing then maxDamage will be a multiple of the territory value (maxDamage defaults to 2 if canProduceXUnits = -1), otherwise it will be a set number -->
 						 <option name="maxDamage" value="3"/>
+						 <!-- maxOperationalDamage is used with certain features like isAirBase, repairsUnits, and givesMovement to determine if those features work or not based on the current damage of this unit. Does not work with factories. -->
 						 <option name="maxOperationalDamage" value="0"/>
 						 <!-- isConstruction allows the unit to be placed in territories that don't contain factories. only "constructionsPerTerrPerTypePerTurn" contructions per territory per turn. 
 								may have only "maxConstructionsPerTypePerTerr" constructions total per territory without factory unless you enable "More Constructions without Factory", 
@@ -2159,6 +2161,8 @@
 								if Unlimited Constructions = true, then this number becomes 10000 -->
 						 <option name="maxConstructionsPerTypePerTerr" value="1"/>
 						 <!--<option name="isTwoHit" value="true"/>-->
+						 <!-- canDieFromReachingMaxDamage means that if this unit reaches its maxDamage, then it will die.  maxDamage must be larger than zero -->
+						 <option name="canDieFromReachingMaxDamage" value="true"/>
                 </attatchment>
 				
 				<!-- Airfield -->
@@ -2223,7 +2227,7 @@
 						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
 						 <!-- unitPlacementOnlyAllowedIn is the direct inverse of unitPlacementRestrictions
 						 <option name="unitPlacementOnlyAllowedIn" value="Germany:East Balkans"/>-->
-						 <!-- canProduceXUnits allows a factory-type unit to produce a set amount of units no matter where it is located.  if -1 then it will produce at the value of the territory where it is.  if greater than -1, you must have "maxDamage" set to some number -->
+						 <!-- canProduceXUnits allows a factory-type unit to produce a set amount of units no matter where it is located.  if -1 then it will produce at the value of the territory where it is.  if greater than -1, you must have "maxDamage" set to some number.  defaults to -1 if missing -->
 						 <option name="canProduceXUnits" value="-1"/>
                 </attatchment>
 
@@ -4298,7 +4302,7 @@
 						<br>7. Kamikaze Fighters are what Japanese fighters turn into if certain conditions are met.  They have 5 attack, 3 defense, and 3 movement (cost 8), and they are allowed to use up all their movement to go to a battle, and they will die after rolling their dice.
 						<br>8. Airfield gives +1 movement to air units, and allows fighters to scramble to defend surrounding sea zones, if you turn on "Scramble Rules In Effect".
 						<br>9. Harbour gives +1 movement to naval units, and are needed to repair Battleships, if you turn on "Two HitPoint Units Require Repair Facilities".
-						<br>10. Bunkers may be placed in any territory you owned at the beginning of the turn (just like Factories, Airfields, and Harbours), but there is a limit of 1 per territory.
+						<br>10. Bunkers are defensive units that can also be bombed/rocketted, and will die if they reach 3 damage.  They may be placed in any territory you owned at the beginning of the turn (just like Factories, Airfields, and Harbours), but there is a limit of 1 per territory.
 						<br>11. New Technologies: reinforcedHulls (gives +2 defense to subs), and wolfPackTactics (gives +1 att, +1 def to subs). Available to Germans after they get superSubs.
 						<br>12. Each nation may only purchase factories up to 3 total, if a nation controls more than 3 they can not purchase new factories (they can keep capturing new ones though).
         				<br>
